static/css/navbar.css
.bg-navbar {
        background-color: #363636;
}

.site-header .navbar-nav .nav-link {
        color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
        color: #ffffff;
}

nav.navbar {
        border: double;
        border-color: white;
}



/* NABAR DROPDOWNS */

.dropdown .dropbtn {
        border: none;
        background-color: #363636;
        outline: none;
}

.dropdown:hover .dropdown-content {
        display: inline;
}

.dropbtn:hover {
        pointer-events:none;
}

.dropdown-content {
        display: none;
        position: absolute;
        background-color: #363636;
        min-width: 160px;
        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
        z-index: 1;
}

.dropdown-content a {
        float: none;
        display: block;
        text-align: left;
        outline: none;
}

